--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{% block title %} Welcome to the Job Board {% endblock %}</h1>
+    <h1>{% block title %} Your results {% endblock %}</h1>
     {% for job in jobs %}
-        <a href="#">
+        <a href={{ job['url']}}>
             <h2>{{ job['title'] }}</h2>
         </a>
-        <span class="badge badge-primary">{{ job['created'] }}</span>
+        <span>
+            <span class="badge badge-primary">{{ job['company'] }}</span>
+            <span class="badge badge-primary">{{ job['location'] }}</span>
+            <span class="badge badge-primary">{{ job['arrangement'] }}</span>
+            <span class="badge badge-primary">YoE: {{ job['yoe'] }}</span>
+            <span class="badge badge-primary">{{ job['level'] }}</span>
+            </span>
         <hr>
     {% endfor %}
 {% endblock %}
