--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,24 @@
         <a href={{ job['url']}}>
             <h2>{{ job['title'] }}</h2>
         </a>
+        <h3>{{ job['company'] }}</h3>
         <span>
-            <span class="badge badge-primary">{{ job['company'] }}</span>
             <span class="badge badge-primary">{{ job['location'] }}</span>
             <span class="badge badge-primary">{{ job['arrangement'] }}</span>
             <span class="badge badge-primary">YoE: {{ job['yoe'] }}</span>
             <span class="badge badge-primary">{{ job['level'] }}</span>
-            </span>
+        </span>
+        <div style="display: flex; gap: 10px; align-items: center;">
+            <form action="">
+                <!--See if name and value attributes are needed in the input elements-->
+                <input type="checkbox" id="applied" name="applied" style="display: inline-block;">
+                <label for="applied">Applied</label>
+                <input type="checkbox" id="save" name="save" style="display: inline-block;">
+                <label for="save">Save</label>
+                <input type="checkbox" id="not-interested" name="not-interested" style="display: inline-block;">
+                <label for="not-interested">Not interested</label><b>
+              </form>
+        </div>
         <hr>
     {% endfor %}
 {% endblock %}
