--- a/templates/base.html
+++ b/templates/base.html
@@ -205,7 +205,10 @@ function updateJobListings(jobs) {
             <a href=${job.url} target="_blank" rel="noopener noreferrer">
             <h2>${job.title}</h2>
         </a>
-        <h3>${job.company}</h3>
+        <div style="display: flex; align-items: center;">
+            <h3>${job.company}</h3>
+            <button class="btn btn-primary ml-auto createMaterials" data-job-id="${job.l_id}">Create Resume</button>
+        </div>
         <span>
             <span class="badge badge-primary">${job.location}</span>
             <span class="badge badge-primary">${job.arrangement}</span>
@@ -220,6 +223,10 @@ function updateJobListings(jobs) {
         
         <hr>`;
         jobsContainer.appendChild(jobElement);
+        let createButton = jobElement.querySelector(".createMaterials");
+        if (createButton) {
+            createButton.setAttribute("data-description", job.description);
+        }
     });
     attachCheckboxListeners();
 }
@@ -262,6 +269,26 @@ function attachCheckboxListeners() {
             .catch(error => console.error("Request failed:", error));
         });
     });
+    const createButtons = document.querySelectorAll(".createMaterials");
+            createButtons.forEach(button => {
+                button.addEventListener("click", function() {
+                    let jobDescription = this.getAttribute("data-description");
+                    console.log(jobDescription);
+                    fetch("/generate_materials", {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json" },
+                        body: JSON.stringify({ jobDescription: jobDescription})
+                    }).then(response => response.json())
+                        .then(data => {
+                            if (!data.success) {
+                                console.error("Error generating materials:", data.error);
+                            } else {
+                                console.log("Materials generated successfully:", data);
+                            }
+                        })
+                        .catch(error => console.error("Request failed:", error));
+                });
+            });
 }
 </script>
 
