--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,11 @@
         </a>
         <div style="display: flex; align-items: center;">
             <h3>{{ job['company'] }}</h3>
-            <button class="btn btn-primary ml-auto createMaterials" data-description="{{ job['description'] }}">Create Resume</button>
+            <div style="margin-left: auto; display: flex; align-items: center; gap: 10px;">
+                <a class="resumeDownload" style="display: none;" download>Resume</a>
+                <a class="coverLetterDownload" style="display: none;" download>Cover Letter</a>
+                <button class="btn btn-primary ml-auto createMaterials" data-description="{{ job['description'] }}">Create Resume</button>
+            </div>
         </div>
         <span>
             <span class="badge badge-primary">{{ job['location'] }}</span>
@@ -46,6 +50,25 @@
                         method: "POST",
                         headers: { "Content-Type": "application/json" },
                         body: JSON.stringify({ jobDescription: jobDescription})
+                    })
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log("In createResume event response function")
+                        if (data.success) {
+                            const resumeURL = '/download_resume';
+                            const coverLetterURL = '/download_cover_letter';
+
+                            const container = this.parentElement;
+                            const resumeDownload = container.querySelector(".resumeDownload");
+                            const coverLetterDownload = container.querySelector(".coverLetterDownload");
+
+                            resumeDownload.href = resumeURL;
+                            coverLetterDownload.href = coverLetterURL;
+                            resumeDownload.style.display = "block";
+                            coverLetterDownload.style.display = "block";
+                        } else {
+                            console.error("Error fetching generated resume/cover letter:", data.error);
+                        }
                     }).catch(error => console.error("Request failed:", error));
                 });
             });
