--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,17 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="{{ url_for('index')}}">hired.cs</ai></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon">@#$%^&</span>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="#">About</a>
-            </li>
+                <a class="nav-link" href="#" id="navDropdown" role="button" data-toggle="dropdown">More</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item nav-link" href="/about">About</a>
+                    <a class="dropdown-item nav-link" href="/write">Write Cover Letters</a>
+                </div>
+              </li>
             <!-- Status Filter -->
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="statusDropdown" role="button" data-toggle="dropdown">
