--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{% block title %} Your results {% endblock %}</h1>
+{% block title %} Hired.ai {% endblock %}
+    <h1>Your results</h1>
     <div id="jobsContainer">
     {% for job in jobs %}
         <a href={{ job['url']}} target="_blank" rel="noopener noreferrer">
