Another attempt at seeing lobs

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% block title %} Hired.ai {% endblock %}
+{% block title %} hired.ai {% endblock %}
     <h1>Your results</h1>
     <div id="jobsContainer">
     {% for job in jobs %}
