--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   </head>
   <body style="padding-top: 60px;">
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="{{ url_for('index')}}">hired.cs</ai></a>
+        <a class="navbar-brand" href="{{ url_for('index')}}">hired.ai</ai></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
